--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>RPS Payments IPL Game</title>
-    <script data-ad-client="pub-1787117690734902" async src="https://pagead2.googlesyndication
-.com/pagead/js/adsbygoogle.js"></script>
+    <script data-ad-client="ca-pub-1787117690734902" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
